JAVAMIG-3393 - update to JSONPropertyDescription, some minor changes on entities.
