# docs/openapi.json
@@ -13,57 +13,6 @@
     "version" : "1.0.0"
   },
   "paths" : {
-    "/contracts/v1" : {
-      "post" : {
-        "tags" : [ "contracts" ],
-        "summary" : "upload a contract at Baloise",
-        "description" : "uploaded a contract to Baloise. If validation fails processing is refused, a corresponding error is thrown",
-        "operationId" : "uploadContract",
-        "requestBody" : {
-          "description" : "Contract that needs to be uploaded to Baloise",
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/Contract"
-              }
-            }
-          },
-          "required" : true
-        },
-        "responses" : {
-          "default" : {
-            "description" : "a handle to the contract for conversation with Baloise is provided",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ContractReference"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Invalid Contract is provided. See Error details for more information about validation issues",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "503" : {
-            "description" : "technical issue on our side, please retry later",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/contracts/v1/documents" : {
       "post" : {
         "tags" : [ "documents" ],
@@ -114,6 +63,57 @@
           }
         }
       }
+    },
+    "/contracts/v1" : {
+      "post" : {
+        "tags" : [ "contracts" ],
+        "summary" : "upload a contract at Baloise",
+        "description" : "uploaded a contract to Baloise. If validation fails processing is refused, a corresponding error is thrown",
+        "operationId" : "uploadContract",
+        "requestBody" : {
+          "description" : "Contract that needs to be uploaded to Baloise",
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Contract"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "default" : {
+            "description" : "a handle to the contract for conversation with Baloise is provided",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ContractReference"
+                }
+              }
+            }
+          },
+          "400" : {
+            "description" : "Invalid Contract is provided. See Error details for more information about validation issues",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "503" : {
+            "description" : "technical issue on our side, please retry later",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components" : {
@@ -125,17 +125,14 @@
           "agentNumber" : {
             "maxLength" : 8,
             "minLength" : 0,
-            "type" : "string",
-            "description" : "Identification of an Agent"
+            "type" : "string"
           },
           "email" : {
             "maxLength" : 70,
             "minLength" : 0,
-            "type" : "string",
-            "description" : "valid email adress"
+            "type" : "string"
           }
-        },
-        "description" : "the agent who induced the contract issuance, usually is eligible for receiving commission"
+        }
       },
       "Company" : {
         "required" : [ "address", "contactFirstName", "contactLastName", "contactSalutation", "name" ],
@@ -149,33 +146,28 @@
           "uidNumber" : {
             "maxLength" : 15,
             "minLength" : 0,
-            "type" : "string",
-            "description" : "identifies a company uniquely, example CHE-105.805.649"
+            "type" : "string"
           },
           "contactSalutation" : {
             "maxLength" : 20,
             "minLength" : 0,
             "type" : "string",
-            "description" : "a contact is a person representing the company",
             "enum" : [ "Mr", "Mrs" ]
           },
           "contactLastName" : {
             "maxLength" : 35,
             "minLength" : 2,
-            "type" : "string",
-            "description" : "a contact is a person representing the company"
+            "type" : "string"
           },
           "contactFirstName" : {
             "maxLength" : 35,
             "minLength" : 2,
-            "type" : "string",
-            "description" : "a contact is a person representing the company"
+            "type" : "string"
           },
           "address" : {
             "$ref" : "#/components/schemas/Address"
           }
-        },
-        "description" : "If the payment was done by a company, this property must be filled. Only one of the properties person or company may be filled."
+        }
       },
       "Address" : {
         "required" : [ "city", "houseNumber", "street", "zipCode" ],
@@ -208,17 +200,16 @@
         "type" : "object",
         "properties" : {
           "amount" : {
-            "type" : "number",
-            "description" : "An amount, e.g. an insured sum or a deductible."
+            "type" : "number"
           }
         }
       },
       "FileHandle" : {
+        "required" : [ "handle" ],
         "type" : "object",
         "properties" : {
           "handle" : {
-            "type" : "string",
-            "description" : "Reference to an uploaded file. This can be e.g. a PDF or a picture (e.g. JPG) of a contract or a purchase receipt."
+            "type" : "string"
           }
         }
       },
@@ -228,7 +219,6 @@
         "properties" : {
           "code" : {
             "type" : "integer",
-            "description" : "a code uniquely identifying a type of coverable",
             "format" : "int32"
           },
           "coverage" : {
@@ -251,9 +241,8 @@
             "type" : "integer",
             "format" : "int32"
           },
-          "pricingYear" : {
+          "pricingMonthYear" : {
             "type" : "string",
-            "description" : "The year in which the pricing for the contract was set.",
             "format" : "date"
           },
           "coverables" : {
@@ -272,7 +261,6 @@
         "properties" : {
           "code" : {
             "type" : "integer",
-            "description" : "a code uniquely identifying a type of coverage",
             "format" : "int32"
           },
           "premium" : {
@@ -287,33 +275,38 @@
         }
       },
       "Document" : {
-        "required" : [ "contractId", "data", "documentType" ],
+        "required" : [ "contractId", "data", "documentType", "fileName", "mediaType" ],
         "type" : "object",
         "properties" : {
           "data" : {
             "type" : "array",
-            "description" : "the document itself",
             "items" : {
               "type" : "string",
-              "description" : "the document itself",
               "format" : "byte"
             }
           },
           "contractId" : {
-            "maxLength" : 20,
+            "maxLength" : 30,
             "minLength" : 0,
+            "type" : "string"
+          },
+          "mediaType" : {
             "type" : "string",
-            "description" : "the contract this document belongs to"
+            "enum" : [ "application_pdf", "image_jpeg", "image_tiff" ]
+          },
+          "fileName" : {
+            "maxLength" : 256,
+            "minLength" : 0,
+            "type" : "string"
           },
           "documentType" : {
-            "maxLength" : 20,
-            "minLength" : 0,
             "type" : "string",
             "enum" : [ "contract", "receipt" ]
           }
         }
       },
       "ErrorResponse" : {
+        "required" : [ "errorCause", "message" ],
         "type" : "object",
         "properties" : {
           "errorCause" : {
@@ -321,15 +314,12 @@
             "enum" : [ "badRequest", "inputValidation" ]
           },
           "message" : {
-            "type" : "string",
-            "description" : "information about the error"
+            "type" : "string"
           },
           "detailMessages" : {
             "type" : "array",
-            "description" : "in case of e.g. validation error, each validation error is represented by one detail message",
             "items" : {
-              "type" : "string",
-              "description" : "in case of e.g. validation error, each validation error is represented by one detail message"
+              "type" : "string"
             }
           }
         }
@@ -340,8 +330,7 @@
           "reference" : {
             "maxLength" : 30,
             "minLength" : 1,
-            "type" : "string",
-            "description" : "under this reference the contract is stored at Baloise"
+            "type" : "string"
           }
         }
       },
@@ -360,7 +349,7 @@
             "$ref" : "#/components/schemas/Company"
           }
         },
-        "description" : "Only one of the properties person or company may be filled."
+        "description" : "At least and at most one one of the properties person or company must provided"
       },
       "Payment" : {
         "required" : [ "code" ],
@@ -376,8 +365,7 @@
           "person" : {
             "$ref" : "#/components/schemas/Person"
           }
-        },
-        "description" : "information about how the customer wants (or has already) payed the premium"
+        }
       },
       "PhoneNumber" : {
         "required" : [ "phoneNumber" ],
@@ -395,29 +383,25 @@
         }
       },
       "Contract" : {
-        "required" : [ "agent", "conditionMonthYear", "conditionType", "contractId", "creationDate", "endDate", "fileHandles", "payment", "product", "roles", "startDate", "totalNetPrice" ],
+        "required" : [ "conditionMonthYear", "conditionType", "contractId", "creationDate", "endDate", "fileHandles", "payment", "product", "roles", "startDate", "totalNetPrice" ],
         "type" : "object",
         "properties" : {
           "creationDate" : {
             "type" : "string",
-            "description" : "the day the contract was issued",
             "format" : "date"
           },
           "startDate" : {
             "type" : "string",
-            "description" : "start of contract which means start of insurance coverage",
             "format" : "date"
           },
           "endDate" : {
             "type" : "string",
-            "description" : "end of contract which means end of insurance coverage",
             "format" : "date"
           },
           "contractId" : {
             "maxLength" : 20,
             "minLength" : 0,
-            "type" : "string",
-            "description" : "id given by SaaS provider"
+            "type" : "string"
           },
           "totalNetPrice" : {
             "$ref" : "#/components/schemas/MonetaryAmount"
@@ -426,7 +410,6 @@
             "maxItems" : 99,
             "minItems" : 1,
             "type" : "array",
-            "description" : "all roles in the contract, e.g. insuranceHolder",
             "items" : {
               "$ref" : "#/components/schemas/Role"
             }
@@ -444,7 +427,6 @@
             "maxItems" : 99,
             "minItems" : 1,
             "type" : "array",
-            "description" : "a contract is only complete with its corresponding documents. This is the contract issued by the SaaS provider and maybe some further documents like e.g. customer provided documents like e.g. receipts",
             "items" : {
               "$ref" : "#/components/schemas/FileHandle"
             }
@@ -452,14 +434,12 @@
           "conditionType" : {
             "maxLength" : 99,
             "minLength" : 1,
-            "type" : "string",
-            "description" : "type of contract conditions"
+            "type" : "string"
           },
           "conditionMonthYear" : {
             "maxLength" : 4,
             "minLength" : 4,
-            "type" : "string",
-            "description" : "when was the condition issued Format MMYY"
+            "type" : "string"
           }
         }
       },
@@ -493,8 +473,7 @@
           "emailAddress" : {
             "maxLength" : 70,
             "minLength" : 0,
-            "type" : "string",
-            "description" : "A valid email address"
+            "type" : "string"
           },
           "language" : {
             "maxLength" : 2,
