# src/main/java/ch/baloise/corellia/api/entities/ContractReference.java
@@ -1,13 +1,13 @@
 package ch.baloise.corellia.api.entities;
 
-import io.swagger.v3.oas.annotations.media.Schema;
+import com.fasterxml.jackson.annotation.JsonPropertyDescription;
 
 import javax.validation.constraints.Size;
 
 public class ContractReference {
 
   @Size(min = 1, max = 30)
-  @Schema(description = "under this reference the contract is stored at Baloise")
+  @JsonPropertyDescription("under this reference the contract is stored at Baloise")
   private String reference;
 
   public String getReference() {
