# src/main/java/ch/baloise/corellia/api/entities/Document.java
@@ -1,6 +1,6 @@
 package ch.baloise.corellia.api.entities;
 
-import io.swagger.v3.oas.annotations.media.Schema;
+import com.fasterxml.jackson.annotation.JsonPropertyDescription;
 
 import javax.validation.constraints.NotNull;
 import javax.validation.constraints.Size;
@@ -10,16 +10,27 @@ public class Document implements Serializable {
 
   private static final long serialVersionUID = 10;
 
-  ;
+  public enum MediaType {application_pdf, image_jpeg, image_tiff}
+  public enum DocumentType {contract, receipt}
+
   @NotNull
-  @Schema(description = "the document itself")
+  @JsonPropertyDescription("the document itself")
   private byte[] data;
+
   @NotNull
-  @Size(max = 20)
-  @Schema(description = "the contract this document belongs to")
+  @Size(max = 30)
+  @JsonPropertyDescription("the contract this document belongs to")
   private String contractId;
+
   @NotNull
-  @Size(max = 20)
+  @JsonPropertyDescription("accepted media types for documents represented by data byte[]")
+  private MediaType mediaType;
+
+  @NotNull
+  @Size(max = 256)
+  private String fileName;
+
+  @NotNull
   private DocumentType documentType;
 
   public byte[] getData() {
@@ -46,5 +57,19 @@ public class Document implements Serializable {
     this.documentType = documentType;
   }
 
-  public enum DocumentType {contract, receipt}
+  public MediaType getMediaType() {
+    return mediaType;
+  }
+
+  public void setMediaType(MediaType mediaType) {
+    this.mediaType = mediaType;
+  }
+
+  public String getFileName() {
+    return fileName;
+  }
+
+  public void setFileName(String fileName) {
+    this.fileName = fileName;
+  }
 }
